--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -14,6 +14,8 @@ $enable-rounded: false;
 @import "bootstrap/bootstrap";
 @import "stars";
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap");
+
 // general
 body,
 input,
@@ -21,14 +23,14 @@ button,
 select,
 optgroup,
 textarea {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
 }
 body {
   line-height: 1.7;
   background: #f4f4f4;
 }
 a {
-  color: darken($primary, 24%);
+  // color: darken($primary, 24%);
 }
 img {
   max-width: 100%;
