--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,9 +74,9 @@
             <!-- Site Logo/Name
     ================================================== -->
 
-            <a class="navbar-brand navbar-logo-name" href="{{ site.baseurl }}/">
+            <a class="navbar-brand  sitetag" href="{{ site.baseurl }}/">
                 <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
-                <h1 class="sitetag">Plinth Industries</h1>
+                <h1>Plinth Industries</h1>
             </a>
 
             <!-- Site Tag
@@ -90,7 +90,8 @@
             <!-- Content
     ================================================== -->
             <div class="main-content">
-                {{ content }}
+                <!-- {{ content }} -->
+                <img src="{{ site.baseurl }}/assets/images/home.svg" alt="{{ site.name }}">
             </div>
 
             {% if site.mailchimp-list %}
