Fix previous change to default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,8 +90,7 @@
             <!-- Content
     ================================================== -->
             <div class="main-content">
-                <!-- {{ content }} -->
-                <img src="{{ site.baseurl }}/assets/images/home.svg" alt="{{ site.name }}">
+                {{ content }}
             </div>
 
             {% if site.mailchimp-list %}
