--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
             <!-- Site Logo/Name
     ================================================== -->
 
-            <a class="navbar-brand  sitetag" href="{{ site.baseurl }}/">
+            <a class="navbar-brand sitetag" href="{{ site.baseurl }}/">
                 <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
                 <h1>Plinth Industries</h1>
             </a>
@@ -89,7 +89,7 @@
 
             <!-- Content
     ================================================== -->
-            <div class="main-content">
+            <div class="main-content featured-image">
                 {{ content }}
             </div>
 
@@ -100,11 +100,17 @@
                 <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo"
                         alt="{{site.title}}"> &nbsp; Never miss an <b>update</b> from us, subscribe to our
                     newsletter</span>
+
+
+
                 <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form"
                     class="wj-contact-form validate" target="_blank" novalidate>
                     <div class="mc-field-group d-inline-flex">
                         <input type="email" placeholder="Your e-mail" name="EMAIL" class="required email" id="mce-EMAIL"
                             autocomplete="on" required>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                name="b_ea067eead2062de8fd79064a9_8c72587754" tabindex="-1" value=""></div>
                         <input type="submit" value="Subscribe" name="subscribe" class="heart">
                     </div>
                 </form>
@@ -120,6 +126,9 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-center text-lg-left">
                         Copyright © {{ site.time | date: "%Y" }} {{ site.name }}
+                    </div>
+                    <div class="col-md-6 col-sm-12 text-center text-lg-left">
+                        <a href="{{ site.baseurl }}/privacy">Privacy Policy</a>
                     </div>
                 </div>
             </div>
