Update privacy policy and add terms of service

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -124,11 +124,14 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 text-center text-lg-left">
+                    <div class="col-md-4 col-sm-12 text-center text-lg-left">
                         Copyright © {{ site.time | date: "%Y" }} {{ site.name }}
                     </div>
-                    <div class="col-md-6 col-sm-12 text-center text-lg-left">
+                    <div class=" col-md-4 col-sm-12 text-center text-lg-left">
                         <a href="{{ site.baseurl }}/privacy">Privacy Policy</a>
+                    </div>
+                    <div class=" col-md-4 col-sm-12 text-center text-lg-left">
+                        <a href="{{ site.baseurl }}/terms">Terms of Service</a>
                     </div>
                 </div>
             </div>
